--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "license": "proprietary",
   "private": true,
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.15",
+    "mongoose": "^5.11.15",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize-cli": "^6.2.0"
   }
 }
