--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "mongoose": "^5.11.15",
+    "nodemailer": "^6.4.18",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize-cli": "^6.2.0"
