--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,9 @@
   ],
   "license": "proprietary",
   "private": true,
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
